add namespace and rename test file

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,4 +53,4 @@ function(SETUP_TEST TEST_NAME TEST_SOURCES)
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
 endfunction()
 
-SETUP_TEST(main main.cpp)
+SETUP_TEST(pool pool.cpp)
