--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 
+# Setup version file
 set(YACS_VERSION_REGEX "#define YACS_VERSION_.*[ \t]+(.+)")
 file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/include/version.h" YACS_VERSION REGEX ${YACS_VERSION_REGEX})
 list(TRANSFORM YACS_VERSION REPLACE ${YACS_VERSION_REGEX} "\\1")
 string(JOIN "." YACS_VERSION ${YACS_VERSION})
 
+# Setup project
 project(
     yacs
     VERSION ${YACS_VERSION}
@@ -12,6 +14,7 @@ project(
     LANGUAGES C CXX
 )
 
+# Setup build information
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
@@ -21,14 +24,14 @@ option(YACS_USE_SANITIZER "Enable address sanitizer by adding -fsanitize=address
 if(YACS_USE_SANITIZER)
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
         set(YACS_HAS_SANITIZER TRUE CACHE BOOL "" FORCE)
-        mark_as_advanced(YACS_HAS_SANITIZER)
     endif()
 
     if(NOT YACS_HAS_SANITIZER)
-        message(VERBOSE "Option to use AddressSanitizer is set but support is not available. Skipped adding flags.")
+        message(VERBOSE "Option to use AddressSanitizer is set but support is not available. Not adding flags.")
     endif()
 endif()
 
+# Setup yacs library
 add_library(yacs INTERFACE)
 
 target_include_directories(
@@ -54,8 +57,9 @@ endif()
 
 option(YACS_BUILD_TESTING "Enable building tests." ON)
 
+# Setup Testing
 if(YACS_BUILD_TESTING)
-    set(YACS_CXX_STD cxx_std_17 CACHE STRING "C++ standard revision to use for the tests")
+    set(YACS_CXX_STD cxx_std_17 CACHE STRING "C++ standard for tests.")
 
     include(CTest)
     enable_testing()
